Sign in Helper methods Sign in Endpoints

--- a/HiddenVilla_API/appsettings.json
+++ b/HiddenVilla_API/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "APISettings": {
+    "SecretKey": "\"u/kTu~yQ$>YIY3i|we:XC^&XZhb53r9ia=%,32I%qWgDVE'21qo=v=@#~nCRXk3",
+    "ValidAudience": "http://localhost:60982",
+    "ValidIssuer": "http://localhost:60982"
+  }
 }
